--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,13 +1,13 @@
 $icons: (
-  'dialog-blank-left'  : 'F000',
-  'dialog-blank-mid'   : 'F001',
-  'dialog-blank-right' : 'F002',
-  'dialog-left'        : 'F003',
-  'dialog-mid'         : 'F004',
-  'dialog-right'       : 'F005',
-  'dialog-black-left'  : 'F006',
-  'dialog-black-mid'   : 'F007',
-  'dialog-black-right' : 'F008',
-  'dialogs-left'       : 'F009',
-  'dialogs-right'      : 'F00A',
+  'dialog-blank-left'  : 'f000',
+  'dialog-blank-mid'   : 'f001',
+  'dialog-blank-right' : 'f002',
+  'dialog-left'        : 'f003',
+  'dialog-mid'         : 'f004',
+  'dialog-right'       : 'f005',
+  'dialog-black-left'  : 'f006',
+  'dialog-black-mid'   : 'f007',
+  'dialog-black-right' : 'f008',
+  'dialogs-left'       : 'f009',
+  'dialogs-right'      : 'f00A',
 );
